// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connected Site Menu should render the site menu in connected state 1`] = `
<div>
  <button
    class="box multichain-connected-site-menu box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center box--background-color-background-default"
    data-testid="connection-menu"
  >
    <div>
      <div
        aria-describedby="tippy-tooltip-1"
        class=""
        data-original-title="Account 2 connected"
        data-tooltipped=""
        style="display: inline;"
        tabindex="0"
      >
        <div
          class="box mm-badge-wrapper box--display-inline-block box--flex-direction-row"
        >
          <span
            class="box mm-icon mm-icon--size-sm box--display-inline-block box--flex-direction-row box--color-icon-default"
            style="mask-image: url('./images/icons/global.svg');"
          />
          <div
            class="box mm-badge-wrapper__badge-container box--flex-direction-row"
            style="bottom: 2px; right: -4px; z-index: 1;"
          >
            <div
              class="box multichain-connected-site-menu__badge  box--flex-direction-row box--background-color-success-default box--rounded-full box--border-color-background-default box--border-width-3 box--border-style-solid"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Connected Site Menu should render the site menu in not connected state 1`] = `
<div>
  <button
    class="box multichain-connected-site-menu box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center box--background-color-background-default"
    data-testid="connection-menu"
  >
    <div>
      <div
        aria-describedby="tippy-tooltip-2"
        class=""
        data-original-title="No accounts connected"
        data-tooltipped=""
        style="display: inline;"
        tabindex="0"
      >
        <div
          class="box mm-badge-wrapper box--display-inline-block box--flex-direction-row"
        >
          <span
            class="box mm-icon mm-icon--size-sm box--display-inline-block box--flex-direction-row box--color-icon-default"
            style="mask-image: url('./images/icons/global.svg');"
          />
          <div
            class="box mm-badge-wrapper__badge-container box--flex-direction-row"
            style="bottom: 2px; right: -4px; z-index: 1;"
          >
            <div
              class="box multichain-connected-site-menu__badge  box--flex-direction-row box--background-color-icon-alternative box--rounded-full box--border-color-background-default box--border-width-3 box--border-style-solid"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`Connected Site Menu should render the site menu in not connected to current account state 1`] = `
<div>
  <button
    class="box multichain-connected-site-menu box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center box--background-color-background-default"
    data-testid="connection-menu"
  >
    <div>
      <div
        aria-describedby="tippy-tooltip-3"
        class=""
        data-original-title="Account 2 not connected"
        data-tooltipped=""
        style="display: inline;"
        tabindex="0"
      >
        <div
          class="box mm-badge-wrapper box--display-inline-block box--flex-direction-row"
        >
          <span
            class="box mm-icon mm-icon--size-sm box--display-inline-block box--flex-direction-row box--color-icon-default"
            style="mask-image: url('./images/icons/global.svg');"
          />
          <div
            class="box mm-badge-wrapper__badge-container box--flex-direction-row"
            style="bottom: 4px; right: -1px; z-index: 1;"
          >
            <div
              class="box multichain-connected-site-menu__badge not-connected box--flex-direction-row box--background-color-background-default box--rounded-full box--border-color-success-default box--border-width-2 box--border-style-solid"
            />
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;
